--- a/app/views/attendances/index.html.haml
+++ b/app/views/attendances/index.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 - content_for :head do
   - if @config.config_value == 'Daily'
     = javascript_include_tag 'attendance', 'date'
