--- a/app/views/student_attendance/index.html.haml
+++ b/app/views/student_attendance/index.html.haml
@@ -22,7 +22,7 @@
   %h3
     = t('attendance' ) + ' '  + t('home')
   #app-back-button
-    = back_button, border: 0)
+    = back_button
 #page-yield
   - unless flash[:notice].nil?
     %p.flash-msg
