--- a/app/views/timetables/teachers_timetable.html.haml
+++ b/app/views/timetables/teachers_timetable.html.haml
@@ -17,7 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 #content-header
-  = link_to  image_tag("show_timetable.png"), controller: :timetable
+  = link_to  image_tag("show_timetable.png"), controller: :timetables
   %h1= t('timetable_text')
   %h3= t('teacher_timetable')
   #app-back-button
