--- a/app/views/users/user_change_password.haml
+++ b/app/views/users/user_change_password.haml
@@ -30,8 +30,9 @@
     #errorExplanation.errorExplanation
       = flash[:warn_notice]
   #changepw-form
-    = form_for :user,@user do |u|
-      = u.error_messages
+    = form_for :user, :url => {:id => @user.username} do |u|
+      - @user.errors.full_messages.each do |msg|
+        = msg
       .label-field-pair
         %label{:for => "course_section"}= t('new_password')
         .text-input-bg
