--- a/app/views/students/_search_ajax.haml
+++ b/app/views/students/_search_ajax.haml
@@ -27,7 +27,7 @@
     - @archived_students.each_with_index do |student, i|
       %tr{:class => "tr-#{cycle('odd', 'even')}"}
         %td.col-1= i+1
-        %td.col-4= link_to student.full_name, :controller => 'archived_student', :action => 'profile', :id => student.id
+        %td.col-4= link_to student.full_name, :controller => 'archived_student', :action => 'profiles', :id => student.id
         %td.col-4= student.batch.full_name
         %td.col-7= student.admission_no
   - else
