--- a/app/views/timetables/_table.html.haml
+++ b/app/views/timetables/_table.html.haml
@@ -16,14 +16,15 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #register
   .header
     .prev
-      = link_to "◄", url_for(controller: :timetables, action: :timetable, next: (@today-1.day)), remote: true
+      = link_to "◄", {controller: :timetables, action: :timetable, next: (@today-1.day)}, :remote => true
     .month
       = I18n.l(@today,:format=>" %d %B %Y")
     .next
-      = link_to "►", url_for(controller: :timetables, action: :timetable, next=>(@today+1.day)), remote: true
+      = link_to "►", {controller: :timetables, action: :timetable, next: (@today+1.day)}, :remote => true
     .extender
 .table
   - @batches.each do |b|
