--- a/app/views/timetables/new_timetable.html.haml
+++ b/app/views/timetables/new_timetable.html.haml
@@ -29,7 +29,7 @@
         = flash[:notice]
     - if @timetable && @timetable.errors
       #errorExplanation.errorExplanation
-        - @timetable.errors.each do |e|
+        - @timetable_errors.each do |e|
           %p
             = t("#{e}")
     = form_for :timetable do |f|
