--- a/app/views/timetables/view.haml
+++ b/app/views/timetables/view.haml
@@ -16,6 +16,8 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= csrf_meta_tag
 #content-header
   = image_tag("show_timetable.png")
   %h1= t('timetable_text')
@@ -41,11 +43,19 @@
           = t('select_a_batch')
         = image_tag("loader.gif", align: "absmiddle", border: 0, id: "loader", style: "display: none;" )
         .text-input-bg
-          = select :timetable_entry, :course_id, @courses.map {|c| [c.full_name, c.id]}, { selected: @course_id, prompt: t('select_a_batch')}, { onChange: 'show_timetable()'}                                         |
+          = select :timetable_entry, :course_id, @courses.map {|c| [c.full_name, c.id]}, { selected: @course_id, prompt: t('select_a_batch')}, { onChange: 'show_timetable();'}
   .extender
   #timetable_view
 :javascript
   function show_timetable(){
-    - course_id = jQuery('timetable_entry_course_id').value;
-    - timetable_id = jQuery('timetable_entry_timetable_id').value;
-    ajaxRequest('#{url_for(controller: :timetable, action: :update_timetable_view, course_id: course_id, timetable_id: timetable_id  )}')
+  
+    var course_id = document.getElementById('timetable_entry_course_id').value;
+    var timetable_id = document.getElementById('timetable_entry_timetable_id').value;
+    $.ajax({ type: "GET",
+    url: "update_timetable_view",
+    data: { course_id: course_id, timetable_id: timetable_id} , 
+    });
+    }
+    
+    
+    
