--- a/app/views/users/edit_privilege.html.haml
+++ b/app/views/users/edit_privilege.html.haml
@@ -58,7 +58,7 @@
     = back_button
 #page-yield
   .privileges
-    = form_for :user do |form|
+    = form_for :user, :url => {:id => @user.username} do |form|
       #application-list.privilege_heading
         .label_field_pair
           %label
@@ -70,7 +70,7 @@
         %table.table_design{:align => "center", :cellpadding => "1", :cellspacing => "1", :width => "100%"}
           %tr
             - @privilege_tags.each_with_index do |privilege_tag,ind|
-              - all_privileges = privilege_tag.privileges.all(:order=>"priority ASC")
+              - all_privileges = privilege_tag.privileges.all.order("priority ASC")
               - if all_privileges.count > 0
                 - if ind==0 or ind==1 or ind==4
                   %td
@@ -101,4 +101,3 @@
                             = t(privilege.description)
                         :javascript
                           privilege_check('#{privilege_tag.id}', $("privilege_check_#{privilege.id}"))
-                    - if ind==0 or ind==3 or ind==4
