--- a/app/views/weekday/index.html.haml
+++ b/app/views/weekday/index.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("show_timetable.png")
   %h1= t('timetable_text')
@@ -32,8 +33,10 @@
         = t('select_a_batch')
         \:
       .text-input-bg
-        = select :batch, :id, @batches.map {|b| [b.full_name, b.id] }, { prompt: t('common')}, {onchange: "onChangeRequest(this, '#{week_weekday_index_path(batch_id: 'paramid')}')"}
+        = select :batch, :id, @batches.map {|b| [b.full_name, b.id] }, { :prompt => t('common')}, 
+        {onchange: "onChangeRequest(this, '#{week_weekday_index_path(batch_id: 'paramid')}')"}
         = image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" )
-    #weekdays= render :partial => "weekdays"
+    #weekdays
+      = render :partial => "weekdays"
     #modal-box{:style => "display:none;"}
     .extender
