--- a/app/views/batch_transfers/index.html.haml
+++ b/app/views/batch_transfers/index.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("show_settings.png")
   %h1= t('batch_transfer')
@@ -38,6 +39,7 @@
       \:
       \#{image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;" )}
     .text-input-bg
-      = select :courses, :name, Course.active.map {|b| [b.full_name, b.id]}, { prompt: t('select_a_course')}, { onChange: "onChangeRequest(this, '#{url_for(action: 'update_batch', course_name: 'paramid')}'"}
+      = select :courses, :name, Course.active.map {|b| [b.full_name, b.id]}, {:prompt => t('select_a_course')},
+      {:onChange => "onChangeRequest(this, '#{url_for(action: 'update_batch', course_name: 'paramid')}'"}
   #update_batch
   .extender
