--- a/app/views/students/add_additional_details.haml
+++ b/app/views/students/add_additional_details.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("show_settings.png")
   %h1= t('student_settings')
@@ -26,7 +27,7 @@
   - unless flash[:notice].nil?
     %p.flash-msg
       = flash[:notice]
-  = form_for @additional_field, :url=>{:action=>(@additional_field.new_record? ? "add_additional_details" : "edit_additional_details")} do |c|
+  = form_for @additional_field, :url=>{:action=>(@additional_field.new_record? ? "add_additional_details" : "edit_additional_details"), :id => @additional_field.id} do |c|
     = error_messages_for 'additional_field'
     #form-content
       .label-field-pair
