--- a/app/views/students/profile.haml
+++ b/app/views/students/profile.haml
@@ -167,14 +167,14 @@
           %tr.odd.left
             %td
             %td.right
-              - detail = StudentAdditionalDetail.find_all_by_student_id(@student.id)
+              - detail = StudentAdditionalDetail.where(:student_id => @student.id)
               - if permitted_to? :edit_admission4,:student
                 - unless detail.blank?
                   %span
-                    (#{link_to "#{t('edit_additional_details')}", :controller => 'student', :action => 'admission4', :id => @student.id})
+                    (#{link_to "#{t('edit_additional_details')}", :controller => 'students', :action => 'admission4', :id => @student.id})
                 - else
                   %span
-                    (#{link_to "#{t('add_additional_details')}", :controller => 'student', :action => 'admission4', :id => @student.id})
+                    (#{link_to "#{t('add_additional_details')}", :controller => 'students', :action => 'admission4', :id => @student.id})
         - unless @previous_data.nil?
           %tr.even.left
             %td
@@ -188,7 +188,7 @@
               %td
               %td.right
                 = t('no_previous_data')
-                (#{link_to "#{t('add_previous_data')}", :controller => 'student', :action => 'previous_data', :id => @student.id})
+                (#{link_to "#{t('add_previous_data')}", :controller => 'students', :action => 'previous_data', :id => @student.id})
           - else
             %tr.odd.left
               %td
