--- a/app/views/subjects/_edit.html.haml
+++ b/app/views/subjects/_edit.html.haml
@@ -16,9 +16,10 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= csrf_meta_tag
 #subjects-form
   %p= @batch.full_name unless @batch.nil?
-  - form_remote_for @subject do |f|
+  = form_for @subject, :remote => true do |f|
     - elective_group_id = (@elective_group.nil? ? nil : @elective_group.id)
     = f.hidden_field :elective_group_id, :value => elective_group_id
     #form-errors
