--- a/app/views/subjects/index.html.haml
+++ b/app/views/subjects/index.html.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("show_settings.png")
   %h1= t('subject')
@@ -36,12 +37,8 @@
       .text-input-bg
         = select :batch, :id,                         |
           @batches.map {|b| [b.full_name, b.id] },    |
-          { prompt: t('select_a_batch')},             |
-          { onchange: "#{remote_function(             |
-          url: { action: 'show', batch_id: "value" }, |
-          with: "'batch_id='+value",                  |
-          before: "Element.show('loader')",           |
-          success: "Element.hide('loader')"  )}"}     |
+          { :prompt =>  t('select_a_batch')},             |
+          {:onChange => "onChangeRequest(this, '#{url_for(action: :show_batch, batch_id: 'paramid')}')"}
     #subjects
     #modal-box{:style => "display:none;"}
     .extender
