--- a/app/views/employee/admission1.haml
+++ b/app/views/employee/admission1.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("employee/admission1.css")
 #content-header
   = image_tag("HR/show_hr.png")
   %h1= t('employee_admission')
